[project]
name = "segdb"
version = "0.0.3"
description = "Database for uniform body segmentation."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Leonard Nürnberg", email = "lnuernberg@bwh.harvard.edu" }]
keywords = ["mhub"]
urls = { "Homepage" = "https://github.com/MHubAI/SegDB" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10" 
dependencies = [
  "pandas~=2.2.2"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["segdb"]  
include-package-data = true

[tool.setuptools.package-data]
"*" = ["data/*.csv"]

[dependency-groups]
dev = [
    "coverage>=7.6.10",
]
